# ash

./: .gitignore  AGENT_MODE_ISSUE_SUMMARY.md  AGENT_MODE_WORK_SUMMARY.md  CLEANUP_ANALYSIS.md  CLEAR_UNDERSTANDING.md  CODE_QUALITY_ASSESSMENT.md  CONNECTION_ID_FIX.md  CONVERSATION_TABS_IMPLEMENTATION_STATUS.md  CORRECT_UNDERSTANDING.md  CURRENT_STATUS.md  DEBUGGING_GUIDE.md  DEBUG_ANALYSIS.md  DEBUG_ISSUE.md  DESIGN_REVIEW.md  DUPLICATE_CONTENT_ANALYSIS.md  FINAL_DEBUGGING_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_OPTIMAL_SOLUTION.md  FINAL_PROPER_SOLUTION.md  FINAL_SOLUTION.md  FINAL_SOLUTION_IMPLEMENTED.md  FINAL_SOLUTION_NEEDED.md  FUNCTION_RESULTS_COMMAND_SUMMARY.md  FUNCTION_RESULTS_STATUS.md  GEMINI_HELP_REQUEST.md  GUARANTEED_SOLUTION.md  ICON_SETUP.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_SUGGESTIONS.md  LICENSE  LOGGING_IMPROVEMENTS.md  NEXT_STEPS_DEBUG.md  ON_DEMAND_BACKEND_IMPLEMENTATION.md  PACKAGING_AND_BACKEND_STATUS.md  PROBLEM_ANALYSIS.md  PROBLEM_AND_SOLUTION.md  PROBLEM_IS_CLEAR.md  PROPER_SOLUTION.md  QWEN_AGENT_CORRECT_USAGE.md  (+30 more)
.taskmaster/: config.json  state.json
backend/: agent_tools.py  app.py  backend.spec  pyproject.toml  requirements.txt  run-backend.sh
backend/ash_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/prompts/: __init__.py  system_prompt.py
design/: AUTO_RECONNECT_PRD.md  CLEANUP_ANALYSIS.md  CODE_SIGNING.md  DEBUG_LOGGING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_RECONNECT_PRD.md  NOTION_HOMEPAGE.md  OPTIMAL_IMPLEMENTATION_PLAN.md  RECONNECT_RETRY_ANALYSIS.md  (+1 more)
(+217 files in other folders)
