[project]
name = "ash-backend"
version = "0.1.0"
description = "Ash Terminal Backend with Qwen-Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "qwen-agent>=0.0.31",
    "uvicorn>=0.37.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "agent_tools"]

